# PLAGins

./: .gitignore  README.md  _c_o_m_port_data_manager_2moc_2moc__predefs_8h_source.html  _c_o_m_port_data_source_2moc_2moc__predefs_8h_source.html  _data_base_2moc_2moc__predefs_8h_source.html  _data_base_source_2moc_2moc__predefs_8h_source.html  _day_plan_2moc_2moc__predefs_8h_source.html  _day_plan_model_2moc_2moc__predefs_8h_source.html  _day_plan_view_2designproxymodel_8h_source.html  _day_plan_view_2moc_2moc__predefs_8h_source.html  _day_plan_view_2mytreeview_8h_source.html  _day_plan_view_2ui_2ui__form_8h_source.html  _experiment_control_2moc_2moc__predefs_8h_source.html  _experiment_control_model_2moc_2moc__predefs_8h_source.html  _experiment_control_view_2moc_2moc__predefs_8h_source.html  _experiment_control_view_2ui_2ui__form_8h_source.html  _extendable_data_manager_plugin_2moc_2moc__predefs_8h_source.html  _fuzzy_logic_manager_2moc_2moc__predefs_8h_source.html  _fuzzy_logic_model_2moc_2moc__predefs_8h_source.html  _grid_main_menu_view_2moc_2moc__predefs_8h_source.html  _grid_main_menu_view_2ui_2ui__form_8h_source.html  _heart_rate_device_2moc_2moc__predefs_8h_source.html  _heart_rate_device_model_2moc_2moc__predefs_8h_source.html  _heart_rate_device_view_2moc_2moc__predefs_8h_source.html  _heart_rate_device_view_2ui_2ui__form_8h_source.html  _machine_learning_manager_2moc_2moc__predefs_8h_source.html  _main_menu_view_2moc_2moc__predefs_8h_source.html  _main_menu_view_2ui_2ui__form_8h_source.html  _modbus_data_reader_2moc_2moc__predefs_8h_source.html  _modbus_data_reader_view_2moc_2moc__predefs_8h_source.html  _modbus_data_reader_view_2ui_2ui__form_8h_source.html  _modbus_device_data_manager_2moc_2moc__predefs_8h_source.html  (+1320 more)
Common/GUIElement/: CMakeLists.txt  (+6 more)
(+407 files in other folders)
